Update .tmux.conf- add tmux capture pane with Y

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,5 +56,12 @@ set -g @resurrect-resurrect-save-shell-history 'full'
 # copy (works with > 2.5 tmux)
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+bind-key Y run-shell '
+    FILE="${HOME}/tmux_capture_$(date +%Y%m%d_%H%M%S).txt";
+    tmux capture-pane -J -S -;
+    tmux save-buffer $FILE;
+    tmux display-message "Pane saved to $FILE"
+'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
